# Snake

./: CMakeLists.txt
include/: snake.h
src/: main.cpp  snake.cpp
